--- a/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_delete_template_spec.yaml
+++ b/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_delete_template_spec.yaml
@@ -13,7 +13,7 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:35 GMT
+      - Wed, 19 May 2021 03:20:49 GMT
       expires:
       - '-1'
       pragma:
@@ -57,7 +57,7 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002?api-version=2021-05-01
   response:
@@ -73,7 +73,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:35 GMT
+      - Wed, 19 May 2021 03:20:49 GMT
       expires:
       - '-1'
       pragma:
@@ -105,16 +105,16 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
-        {\r\n    \"createdBy\": \"zhoxing@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-04-16T02:00:40.1773026Z\",\r\n    \"lastModifiedBy\":
-        \"zhoxing@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-04-16T02:00:40.1773026Z\"\r\n  },\r\n  \"properties\": {},\r\n  \"id\":
+        {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:51.9841994Z\",\r\n    \"lastModifiedBy\":
+        \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
+        \"2021-05-19T03:20:51.9841994Z\"\r\n  },\r\n  \"properties\": {},\r\n  \"id\":
         \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-list-template-spec000002\"\r\n}"
     headers:
@@ -125,7 +125,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:41 GMT
+      - Wed, 19 May 2021 03:20:51 GMT
       expires:
       - '-1'
       pragma:
@@ -137,13 +137,13 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1196'
+      - '1199'
     status:
       code: 201
       message: Created
 - request:
-    body: '{"location": "westus", "tags": {}, "properties": {"artifacts": [], "template":
-      {"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
+    body: '{"location": "westus", "tags": {}, "properties": {"linkedTemplates": [],
+      "mainTemplate": {"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
       "contentVersion": "1.0.0.0", "parameters": {"location": {"type": "string", "defaultValue":
       "[resourceGroup().location]", "metadata": {"description": "Location for the
       network security group."}}, "name": {"type": "string", "metadata": {"description":
@@ -162,23 +162,23 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '811'
+      - '803'
       Content-Type:
       - application/json
       ParameterSetName:
       - -g -n -v -l -f
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
-        {\r\n    \"createdBy\": \"zhoxing@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-04-16T02:00:43.2523201Z\",\r\n    \"lastModifiedBy\":
-        \"zhoxing@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-04-16T02:00:43.2523201Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
-        [],\r\n    \"template\": {\r\n      \"$schema\": \"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#\",\r\n
+        {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:53.0642672Z\",\r\n    \"lastModifiedBy\":
+        \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
+        \"2021-05-19T03:20:53.0642672Z\"\r\n  },\r\n  \"properties\": {\r\n    \"mainTemplate\":
+        {\r\n      \"$schema\": \"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#\",\r\n
         \     \"contentVersion\": \"1.0.0.0\",\r\n      \"parameters\": {\r\n        \"location\":
         {\r\n          \"type\": \"string\",\r\n          \"defaultValue\": \"[resourceGroup().location]\",\r\n
         \         \"metadata\": {\r\n            \"description\": \"Location for the
@@ -199,11 +199,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1830'
+      - '1814'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:44 GMT
+      - Wed, 19 May 2021 03:20:52 GMT
       expires:
       - '-1'
       pragma:
@@ -215,7 +215,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1194'
+      - '1198'
     status:
       code: 201
       message: Created
@@ -233,17 +233,17 @@ interactions:
       ParameterSetName:
       - --template-spec
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002/versions/1.0?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
-        {\r\n    \"createdBy\": \"zhoxing@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-04-16T02:00:43.2523201Z\",\r\n    \"lastModifiedBy\":
-        \"zhoxing@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-04-16T02:00:43.2523201Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
-        [],\r\n    \"template\": {\r\n      \"$schema\": \"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#\",\r\n
+        {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:53.0642672Z\",\r\n    \"lastModifiedBy\":
+        \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
+        \"2021-05-19T03:20:53.0642672Z\"\r\n  },\r\n  \"properties\": {\r\n    \"mainTemplate\":
+        {\r\n      \"$schema\": \"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#\",\r\n
         \     \"contentVersion\": \"1.0.0.0\",\r\n      \"parameters\": {\r\n        \"location\":
         {\r\n          \"type\": \"string\",\r\n          \"defaultValue\": \"[resourceGroup().location]\",\r\n
         \         \"metadata\": {\r\n            \"description\": \"Location for the
@@ -264,11 +264,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1830'
+      - '1814'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:45 GMT
+      - Wed, 19 May 2021 03:20:54 GMT
       expires:
       - '-1'
       pragma:
@@ -300,29 +300,29 @@ interactions:
       ParameterSetName:
       - --template-spec
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002?$expand=versions&api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002?$expand=versions&api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
-        {\r\n    \"createdBy\": \"zhoxing@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-04-16T02:00:40.1773026Z\",\r\n    \"lastModifiedBy\":
-        \"zhoxing@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-04-16T02:00:43.2523201Z\"\r\n  },\r\n  \"properties\": {\r\n    \"versions\":
-        {\r\n      \"1.0\": {\r\n        \"timeCreated\": \"2021-04-16T02:00:43.2523201+00:00\",\r\n
-        \       \"timeModified\": \"2021-04-16T02:00:43.2523201+00:00\"\r\n      }\r\n
+        {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:51.9841994Z\",\r\n    \"lastModifiedBy\":
+        \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
+        \"2021-05-19T03:20:53.0642672Z\"\r\n  },\r\n  \"properties\": {\r\n    \"versions\":
+        {\r\n      \"1.0\": {\r\n        \"timeCreated\": \"2021-05-19T03:20:53.0642672+00:00\",\r\n
+        \       \"timeModified\": \"2021-05-19T03:20:53.0642672+00:00\"\r\n      }\r\n
         \   }\r\n  },\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-list-template-spec000002\"\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '909'
+      - '911'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:46 GMT
+      - Wed, 19 May 2021 03:20:53 GMT
       expires:
       - '-1'
       pragma:
@@ -356,9 +356,9 @@ interactions:
       ParameterSetName:
       - --template-spec --yes
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: DELETE
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002/versions/1.0?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: ''
@@ -368,7 +368,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 16 Apr 2021 02:00:51 GMT
+      - Wed, 19 May 2021 03:20:56 GMT
       expires:
       - '-1'
       pragma:
@@ -380,7 +380,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-deletes:
-      - '14999'
+      - '14998'
     status:
       code: 200
       message: OK
@@ -398,16 +398,16 @@ interactions:
       ParameterSetName:
       - -g
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"value\": [\r\n    {\r\n      \"location\": \"westus\",\r\n
-        \     \"tags\": {},\r\n      \"systemData\": {\r\n        \"createdBy\": \"zhoxing@microsoft.com\",\r\n
-        \       \"createdByType\": \"User\",\r\n        \"createdAt\": \"2021-04-16T02:00:40.1773026Z\",\r\n
-        \       \"lastModifiedBy\": \"zhoxing@microsoft.com\",\r\n        \"lastModifiedByType\":
-        \"User\",\r\n        \"lastModifiedAt\": \"2021-04-16T02:00:43.2523201Z\"\r\n
+        \     \"tags\": {},\r\n      \"systemData\": {\r\n        \"createdBy\": \"daetienn@microsoft.com\",\r\n
+        \       \"createdByType\": \"User\",\r\n        \"createdAt\": \"2021-05-19T03:20:51.9841994Z\",\r\n
+        \       \"lastModifiedBy\": \"daetienn@microsoft.com\",\r\n        \"lastModifiedByType\":
+        \"User\",\r\n        \"lastModifiedAt\": \"2021-05-19T03:20:53.0642672Z\"\r\n
         \     },\r\n      \"properties\": {},\r\n      \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002\",\r\n
         \     \"type\": \"Microsoft.Resources/templateSpecs\",\r\n      \"name\":
         \"cli-test-list-template-spec000002\"\r\n    }\r\n  ]\r\n}"
@@ -415,11 +415,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '821'
+      - '823'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:51 GMT
+      - Wed, 19 May 2021 03:20:57 GMT
       expires:
       - '-1'
       pragma:
@@ -453,9 +453,9 @@ interactions:
       ParameterSetName:
       - --template-spec --yes
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: DELETE
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-list-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: ''
@@ -465,7 +465,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 16 Apr 2021 02:00:56 GMT
+      - Wed, 19 May 2021 03:20:59 GMT
       expires:
       - '-1'
       pragma:
@@ -495,9 +495,9 @@ interactions:
       ParameterSetName:
       - -g
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/?api-version=2021-05-01
   response:
     body:
       string: '{"value":[]}'
@@ -509,7 +509,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:00:57 GMT
+      - Wed, 19 May 2021 03:21:00 GMT
       expires:
       - '-1'
       pragma:
