--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -40,7 +40,7 @@
 /src/azure-cli/azure/cli/command_modules/feedback/ @fengzhou-msft @jiasli
 /src/azure-cli/azure/cli/command_modules/hdinsight/ @aim-for-better @Juliehzl @kairu-ms
 /src/azure-cli/azure/cli/command_modules/iot/ @digimaun
-/src/azure-cli/azure/cli/command_modules/keyvault/ @evelyn-ys @jiasli @houk-ms
+/src/azure-cli/azure/cli/command_modules/keyvault/ @evelyn-ys @jiasli
 /src/azure-cli/azure/cli/command_modules/monitor/ @jsntcy @kairu-ms
 /src/azure-cli/azure/cli/command_modules/natgateway/ @khannarheams @jsntcy @kairu-ms
 /src/azure-cli/azure/cli/command_modules/network/ @jsntcy @kairu-ms
